Fix gap between listings

--- a/src/App.css
+++ b/src/App.css
@@ -133,7 +133,8 @@
   padding-bottom: 3rem;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+
+  gap: 3em;
 }
 
 @media (min-width: 700px) {
